--- a/templates/sampleapp_index.html
+++ b/templates/sampleapp_index.html
@@ -10,27 +10,19 @@
 
 <div class="col-md-9">
 
-<h4 class="margin-2 title3">Search by keyword</h4>
-<hr>
-  <form class="search" action="" method="GET">
-    <input type="text" class="search-input" placeholder="Enter keyword..." name="title__icontains" id="id_title__icontains" value="">
-    <button type="submit" class="search-btn" name="button">Search</button>
-  </form>
-<br>
-
-
+<h4 class="margin-2">Sample Published Posts</h4>
 
   <div class="main">
   {% for post in posts %}
-    <div class="card style-3 mt-3">
+    <div class="card mt-3">
 
         <div class="card-body">
-          <h5 class="title3"><a href="{% url 'sampleapp_detail' post.slug %}">{{ post.title }}</a></h5>
+          <h5><a href="{% url 'sampleapp_detail' post.slug %}">{{ post.title }}</a></h5>
             <small class="mt-2">
                 {{ post.created_on.date }} |&nbsp;
-                Tag:&nbsp;
+                Category:&nbsp;
                 {% for category in post.categories.all %}
-                    <a href="{% url 'sampleapp_category' category.name %}" class="p-tag">
+                    <a href="{% url 'sampleapp_category' category.name %}">
                         {{ category.name }}
                     </a>&nbsp;
                   {% endfor %}
