--- a/templates/footer.html
+++ b/templates/footer.html
@@ -2,13 +2,14 @@
 
 {% block content %}
   <!-- Footer -->
-      <footer class="text-muted py-5">
+  <hr>
+      <footer class="text-muted py-5 text-center">
         <div class="container">
             <p class="float-end mb-1">
             <a href="#">Back to top</a>
             </p>
-            <p class="mb-1">Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-            <p class="mb-0">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a href="../getting-started/introduction/">getting started guide</a>.</p>
+            <p class="mb-1">Sampleapp &copy; | Footer</p>
+            <p class="mb-0">New to Bootstrap?.</p>
         </div>
     </footer>
   <!-- End -->
