--- a/templates/sampleapp_detail.html
+++ b/templates/sampleapp_detail.html
@@ -2,22 +2,21 @@
 {% load static %}
 {% block content %}
 <div class="container">
-  <div class="row margin-1">
+  <div class="row">
     <div class="col-md-3">
         <!--sidebar-->
-        {% include 'sidebar.html' with most_recent=most_recent%}
     </div>
-    <div class="col-md-9 margin-1">
+    <div class="col-md-9 mt-5">
      
-        <h5 class="title2">{{ post.title }}</h5>
+        <h5>{{ post.title }}</h5>
             <small class="mt-2">
                 {{ post.created_on.date }} |&nbsp;
-                Tag:&nbsp;
+                Category:&nbsp;
                 {% for category in post.categories.all %}
-                    <a href="{% url 'sampleapp_category' category.name %}" class="p-tag">
+                    <a href="{% url 'sampleapp_category' category.name %}">
                         {{ category.name }}
                     </a>&nbsp;
-                    {% endfor %}
+                {% endfor %}
             </small>
         <p>{{ post.body | striptags | linebreaks }}</p>
 
